# pdf_reader

./: .dockerignore  .gitignore  .gitignore_rust  ARCHITECTURE.md  CHANGES_SUMMARY.md  CMakeLists.txt  COMPARISON.md  COMPLETION_SUMMARY.txt  CONFIG_STRUCTURE.md  CURSOR_AND_ICON_FIX.md  CUSTOM_TITLEBAR_ANALYSIS.md  Cargo.toml  DELIVERABLES.md  DEVELOPMENT.md  Dockerfile  EXECUTIVE_SUMMARY.md  ICON_IMPROVEMENTS.md  ICON_TROUBLESHOOTING.md  IMPLEMENTATION_COMPLETE.md  INDEX.md  INSTALL.md  LICENSE  LICENSE_COMMERCIAL.txt  MANIFEST.in  MIGRATION_GUIDE.md  PERFORMANCE_OVERHAUL.md  PERFORMANCE_README.md  PROJECT_SUMMARY.md  PR_SUMMARY.md  QUICKSTART_RUST.md  QUICK_REFERENCE.md  QUICK_START_TH.md  README.md  README_COMMERCIAL.md  README_RUST.md  README_WINRES.md  RUST_IMPLEMENTATION_SUMMARY.md  RUST_PROJECT_COMPLETE.md  STANDARD_TITLEBAR.md  TESTING_PLAN.md  (+37 more)
src/: MainWindow.cpp  MainWindow.h  PDFViewer.cpp  PDFViewer.h  SearchDialog.cpp  SearchDialog.h  ThumbnailWidget.cpp  ThumbnailWidget.h  annotation.rs  app.rs  commands.rs  config.rs  main.cpp  main.rs  page_cache.rs  pdf_document.rs  performance_config.rs  performance_metrics.rs  render_scheduler.rs  render_worker.rs  search.rs  texture_pool.rs  thumbnail_manager.rs  viewport.rs  workspace.rs
src/ui/: activity_bar.rs  icons.rs  mod.rs  sidebar.rs  statusbar.rs  theme.rs  titlebar.rs  tool_palette.rs  toolbar.rs  viewer.rs
src/ui/components/: button.rs  mod.rs  panel.rs  property_grid.rs  search_box.rs  section.rs  statusbar.rs  toolbar.rs  tree_view.rs
src/ui/panels/: command_palette.rs  left_sidebar.rs  menubar.rs  mod.rs  right_sidebar.rs
