[package]
name = "doclens"
version = "0.1.0"
edition = "2021"
authors = ["DocLens Team"]
description = "A feature-rich PDF viewer written in Rust"

[dependencies]
# GUI Framework
eframe = "0.31"
egui = "0.31"
egui_extras = { version = "0.31", features = ["all_loaders"] }

# PDF Rendering
pdfium-render = "0.8"

# Image Processing
image = "0.25"
ico = "0.3"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Threading
rayon = "1.10"

# Collections
lru = "0.12"

# File System
dirs = "5.0"

# Error Handling
anyhow = "1"
thiserror = "2"

# File Dialogs
rfd = "0.15"

# Logging
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[build-dependencies]
winres = "0.1"
