[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-viewer"
version = "1.0.0"
description = "A feature-rich PDF viewer built with PySide6 and PyMuPDF"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["pdf", "viewer", "pyside6", "pymupdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PySide6",
    "PyMuPDF",
    "Pillow",
]

[project.scripts]
pdf-viewer = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/pdf-viewer"
Repository = "https://github.com/yourusername/pdf-viewer"
