[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "doclens"
version = "1.0.0"
description = "DocLens - A feature-rich PDF viewer built with PySide6 and PyMuPDF"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["doclens", "pdf", "viewer", "pyside6", "pymupdf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PySide6",
    "PyMuPDF",
    "Pillow",
]

[project.scripts]
doclens = "main:main"

[project.urls]
Homepage = "https://github.com/yourusername/doclens"
Repository = "https://github.com/yourusername/doclens"
